--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html> 
     <body background="bg.png">
+        <meta charset='utf-8'>
         <title>Fangcat Blog</title>
         <a href='index.html'>
             <img src='blog.png'>
