--- a/new-1.html
+++ b/new-1.html
@@ -11,10 +11,5 @@
             <button>文章</button>
         </a>
         <hr>
-        <h1>欢迎！</h1>
-        <p>欢迎来到方方的博客，在这里，我将会分享一些编程经验，以及我个人的一些信息。</p>
-        <hr>
-        <h2>文章</h2>
-        <a href='new-1.html'>Python</a>
-    </body>
-</html>
+        <h2>Python</h2>
+        <p>测试</p>
