--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <a href='new.html'>
             <button>文章</button>
         </a>
+        <a href='https://gitee.com/Fangcatchina'>
+            <button>我的项目</button>
+        </a>
         <hr>
         <h1>欢迎！</h1>
         <p>欢迎来到方方的博客，在这里，我将会分享一些编程经验，以及我个人的一些信息。</p>
