--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <p>欢迎来到方方的博客，在这里，我将会分享一些编程经验，以及我个人的一些信息。</p>
         <hr>
         <h2>文章</h2>
-        <a href='new-1.html'>Python</a>
+        <a href='new-1.html'>测试文章</a>
     </body>
 </html>
