--- a/new.html
+++ b/new.html
@@ -10,7 +10,12 @@
         <a href='new.html'>
             <button>文章</button>
         </a>
+        <a href='https://gitee.com/Fangcatchina'>
+            <button>我的项目</button>
+        </a>
         <hr>
-        <a href='new-1.html'>Python</a>
+        <a href='new-1.html'>
+            <button>Python</button>
+        </a>
     </body>
 </html>
