--- a/python.html
+++ b/python.html
@@ -14,6 +14,6 @@
             <button>我的项目</button>
         </a>
         <hr>
-        <h2>测试文章</h2>
+        <h2>Python专栏</h2>
+        <a href='new-1'>测试文章</a>
         <p style='color:gray;'>发布时间：2020-12-20</p>
-        <p>测试</p>
