--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
         <hr>
         <h2>文章</h2>
         <a href='new-1.html'>测试文章</a>
+        <script type="text/javascript" src="lib/jquery.js"></script>
+        <script type="text/javascript" src="dist/chuncai.js"></script>
+        <script type="text/javascript">
+            $.chuncai();
+        </script>
     </body>
 </html>
