--- a/python.html
+++ b/python.html
@@ -17,3 +17,5 @@
         <h2>Python专栏</h2>
         <a href='new-1'>测试文章</a>
         <p style='color:gray;'>发布时间：2020-12-20</p>
+    </body>
+</html>
