--- a/new.html
+++ b/new.html
@@ -14,7 +14,7 @@
             <button>我的项目</button>
         </a>
         <hr>
-        <a href='new-1.html'>
+        <a href='python.html'>
             <button>Python</button>
         </a>
     </body>
