--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src='https://img.shields.io/badge/Chat-on%20email(f20091219%40outlook.com)-green'>
         <hr>
         <h2>文章</h2>
-        <a href='new-1.html'>测试文章</a>
+        <a href='new-1.html'>Pyfang库的创建</a>
         <script type="text/javascript" src="lib/jquery.js"></script>
         <script type="text/javascript" src="dist/chuncai.js"></script>
         <script type="text/javascript">
