--- a/new.html
+++ b/new.html
@@ -15,7 +15,7 @@
         </a>
         <hr>
         <a href='python.html'>
-            <button>Python</button>
+            <button>Pyfang&Python</button>
         </a>
     </body>
 </html>
