--- a/python.html
+++ b/python.html
@@ -14,8 +14,8 @@
             <button>我的项目</button>
         </a>
         <hr>
-        <h2>Python专栏</h2>
-        <a href='new-1'>测试文章</a>
-        <p style='color:gray;'>发布时间：2020-12-20</p>
+        <h2>Python与Pyfang专栏</h2>
+        <a href='new-1'>Pyfang库的建立</a>
+        <p style='color:gray;'>发布时间：2020-12-27</p>
     </body>
 </html>
