--- a/develop.html
+++ b/develop.html
@@ -17,9 +17,7 @@
         <h1>开发人员测试页面</h1>
         <h2>请注意，各个测试页面将测试不同功能，可能会有测试密码！</h2>
         <button>
-            <a href='password-test.html>
-                密码测试
-            </a>
+            <a href='password-test.html'>密码测试</a>
         </button>
     </body>
 </html>
