--- a/password-test.html
+++ b/password-test.html
@@ -13,7 +13,7 @@
         <a href='https://gitee.com/Fangcatchina'>
             <button>我的项目</button>
         </a>
-        <script src='filepassword,js'></script>
+        <script src='filepassword.js'></script>
         <hr>
         <h1>测试页面</h1>
         <p>文件密码测试页面</p>
