--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="144" height="20" role="img" aria-label="My Gitee: FangcatChina"><title>My Gitee: FangcatChina</title><linearGradient id="s" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="r"><rect width="144" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#r)"><rect width="59" height="20" fill="#555"/><rect x="59" width="85" height="20" fill="#e05d44"/><rect width="144" height="20" fill="url(#s)"/></g><g fill="#fff" text-anchor="middle" font-family="Verdana,Geneva,DejaVu Sans,sans-serif" text-rendering="geometricPrecision" font-size="110"><text aria-hidden="true" x="305" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="490">My Gitee</text><text x="305" y="140" transform="scale(.1)" fill="#fff" textLength="490">My Gitee</text><text aria-hidden="true" x="1005" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="750">FangcatChina</text><text x="1005" y="140" transform="scale(.1)" fill="#fff" textLength="750">FangcatChina</text></g></svg>
         </a>
         <img src='https://img.shields.io/badge/Chat-on%20email(f20091219%40outlook.com)-green'>
+        <a href='https://gitter.im/fangcatchina-Pyfang-language/community'>
+            <ing src='https://badges.gitter.im/fangcatchina-Pyfang-language/community.svg'>
+        </a>
         <hr>
         <h2>文章</h2>
         <a href='new-1.html'>Pyfang库的创建</a>
