--- a/develop.html
+++ b/develop.html
@@ -2,16 +2,9 @@
 <html> 
     <body background="bg.png">
         <meta charset='utf-8'>
-        <title>Fangcat Blog</title>
+        <title>Fangcat Blog——Develop Page</title>
         <a href='index.html'>
             <img src='blog.png'>
-        </a>
-        <hr>
-        <a href='new.html'>
-            <button>文章</button>
-        </a>
-        <a href='https://gitee.com/Fangcatchina'>
-            <button>我的项目</button>
         </a>
         <hr>
         <h1>开发人员测试页面</h1>
