--- a/python.html
+++ b/python.html
@@ -10,6 +10,9 @@
         <a href='new.html'>
             <button>文章</button>
         </a>
+        <a href='develop.html'>
+            <button>Beta测试页面</button>
+        </a>
         <a href='https://gitee.com/Fangcatchina'>
             <button>我的项目</button>
         </a>
