--- a/new-1.html
+++ b/new-1.html
@@ -7,15 +7,9 @@
             <img src='blog.png'>
         </a>
         <hr>
-        <a href='new.html'>
-            <button>文章</button>
-        </a>
-        <a href='https://gitee.com/Fangcatchina'>
-            <button>我的项目</button>
-        </a>
+        <h1>文章区</h1>
         <hr>
-
-        <h2>Pyfang库的建立</h2>
+        <h1>Pyfang库的建立</h2>
         <p style='color:gray;'>发布时间：2020-12-27</p>
         <p>我们首先写一个Python脚本，例：
         <code>
@@ -28,3 +22,5 @@
         </code>
         这样就编写完毕了。</p>
         <h2>重点：区分教程中的Python和Pyfang。</h2>
+    </body>
+</html>
