--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <hr>
         <h2>文章</h2>
         <a href='new-1.html'>Pyfang库的创建</a>
+        <hr>
+        <a href='change-zone.html'>
+            <button>加载慢？试试点我切换其他站点</button>
+        </a>
         <script type="text/javascript" src="lib/jquery.js"></script>
         <script type="text/javascript" src="dist/chuncai.js"></script>
         <script type="text/javascript">
