--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <hr>
         <h2>文章</h2>
         <a href='new-1.html'>Pyfang库的创建</a>
+        <a href='new-2.html'>Easy HTML是什么？</a>
         <hr>
         <a href='change-zone.html'>
             <button>加载慢？试试点我切换其他站点</button>
