--- a/new.html
+++ b/new.html
@@ -20,5 +20,8 @@
         <a href='python.html'>
             <button>Pyfang&Python</button>
         </a>
+        <a href='html.html'>
+            <button>HTML</button>
+        </a>
     </body>
 </html>
